<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/photo"
        app:srcCompat="@drawable/icon_cinema" />

    <EditText
        android:id="@+id/filmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/titre"
        android:inputType="text"
        android:textColor="@color/design_default_color_error"
        android:textColorHint="@color/design_default_color_error"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/filmDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filmTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:autofillHints=""
        android:hint="@string/realisateur"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/design_default_color_error"
        android:textColorHint="@color/design_default_color_error"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/filmDirector"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/vu_avec"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/filmPartners"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/filmDirector"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_toEndOf="@+id/textView4"
        android:autofillHints=""
        android:hint="@string/entrer_vos_partenaires"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/lieu"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/filmPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/textView5"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/btnCinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinema"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/btnTheatre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/theatre"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/btnTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/tv"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/date_de_visionnage"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/filmDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView5"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/textView6"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="openDatePicker"
        android:text="@string/date"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/design_default_color_error"
        android:onClick="saveData"
        android:text="@string/saveFilmButton" />


</RelativeLayout>